--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Dashboard Mail Service</title>
+    <title>Testemunho por Telefone</title>
 
     <base href="/">
 
